test/resources/execution/failing/Array4.grading.amy
Object TestA4
var t: Int(32) = new Int(32)[10];
t = new Int(32)[11]
end TestA4